Various. Build doc code sync. struct::stack, Tcl build code added.

--- a/embedded/stack/www/stack/files/stack.html
+++ b/embedded/stack/www/stack/files/stack.html
@@ -91,14 +91,15 @@
     }
 --></style>
 </head>
-<! -- Generated from file '/home/aku/Projects/Struct/struct/embedded/stack/www/files/stack.html' by tcllib/doctools with format 'html'
+<! -- Generated from file 'stack/files/stack.html' by tcllib/doctools with format 'html'
    -->
 <! -- CVS: $Id$ struct::stack.n
    -->
 <body><div class="doctools">
 <hr> [
-  <a href="../toc.html">Table Of Contents</a>
-| <a href="../index.html">Keyword Index</a>
+  <a href="../../toc.html">Main Table Of Contents</a>
+| <a href="../toc.html">Table Of Contents</a>
+| <a href="../../index.html">Keyword Index</a>
 ] <hr>
 <h1 class="title">struct::stack(n) 2 stack &quot;Tcl Data Structures&quot;</h1>
 <div id="name" class="section"><h2><a name="name">Name</a></h2>
@@ -113,7 +114,7 @@
 <li class="section"><a href="#section3">Instance API</a></li>
 <li class="section"><a href="#section4">Implementations</a>
 <ul>
-<li class="subsection"><a href="#subsection1">critcl v3.1, critcl::class 1.0.1</a></li>
+<li class="subsection"><a href="#subsection1">critcl v3.1.1, critcl::class 1.0.2</a></li>
 <li class="subsection"><a href="#subsection2">pure Tcl</a></li>
 </ul>
 </li>
@@ -233,7 +234,7 @@ they are listed.</p></dd>
 </dl>
 </div>
 <div id="section4" class="section"><h2><a name="section4">Implementations</a></h2>
-<div id="subsection1" class="subsection"><h3><a name="subsection1">critcl v3.1, critcl::class 1.0.1</a></h3>
+<div id="subsection1" class="subsection"><h3><a name="subsection1">critcl v3.1.1, critcl::class 1.0.2</a></h3>
 <p>This is a C implementation of the API depending on the packages
 <b class="package">c::slice</b> and <b class="package"><a href="cstack.html">c::stack</a></b>.</p>
 </div>
@@ -254,7 +255,7 @@ Please also report any ideas for enhancements you may have for either
 package and/or documentation.</p>
 </div>
 <div id="keywords" class="section"><h2><a name="keywords">Keywords</a></h2>
-<p><a href="../index.html#key2">data structures</a>, <a href="../index.html#key0">lifo</a>, <a href="../index.html#key1">stack</a></p>
+<p><a href="../../index.html#key2">data structures</a>, <a href="../../index.html#key0">lifo</a>, <a href="../../index.html#key1">stack</a></p>
 </div>
 <div id="category" class="section"><h2><a name="category">Category</a></h2>
 <p>Data structures</p>
