--- a/embedded/stack/www/index.html
+++ b/embedded/stack/www/index.html
@@ -10,7 +10,7 @@
 <hr> [
   <a href="toc.html">Table Of Contents</a>
 ] <hr>
-<h3> Keyword Index -- stack </h3>
+<h3> Keyword Index </h3>
 <hr><div class="#idxnav">
 <a href="#c1"> D </a> &#183; <a href="#c2"> L </a> &#183; <a href="#c3"> S </a>
 </div>
@@ -21,7 +21,7 @@
 <tr class="#idxeven" valign=top>
 <td class="#idxleft" width="35%"><a name="key2"> data structures </a></td>
 <td class="#idxright" width="65%">
-<a href="files/cstack.html"> c::stack </a> &#183; <a href="files/stack.html"> struct::stack </a>
+<a href="stack/files/cstack.html"> c::stack </a> &#183; <a href="stack/files/stack.html"> struct::stack </a>
 </td></tr>
 <tr class="#idxheader"><th colspan="2">
 <a name="c2">Keywords: L</a>
@@ -29,7 +29,7 @@
 <tr class="#idxodd" valign=top>
 <td class="#idxleft" width="35%"><a name="key0"> lifo </a></td>
 <td class="#idxright" width="65%">
-<a href="files/cstack.html"> c::stack </a> &#183; <a href="files/stack.html"> struct::stack </a>
+<a href="stack/files/cstack.html"> c::stack </a> &#183; <a href="stack/files/stack.html"> struct::stack </a>
 </td></tr>
 <tr class="#idxheader"><th colspan="2">
 <a name="c3">Keywords: S</a>
@@ -37,7 +37,7 @@
 <tr class="#idxeven" valign=top>
 <td class="#idxleft" width="35%"><a name="key1"> stack </a></td>
 <td class="#idxright" width="65%">
-<a href="files/cstack.html"> c::stack </a> &#183; <a href="files/stack.html"> struct::stack </a>
+<a href="stack/files/cstack.html"> c::stack </a> &#183; <a href="stack/files/stack.html"> struct::stack </a>
 </td></tr>
 </table>
 </body></html>
