--- a/embedded/stack/www/stack/files/cstack.html
+++ b/embedded/stack/www/stack/files/cstack.html
@@ -92,14 +92,15 @@
     }
 --></style>
 </head>
-<! -- Generated from file '/home/aku/Projects/Struct/struct/embedded/stack/www/files/cstack.html' by tcllib/doctools with format 'html'
+<! -- Generated from file 'stack/files/cstack.html' by tcllib/doctools with format 'html'
    -->
 <! -- CVS: $Id$ c::stack.n
    -->
 <body><div class="doctools">
 <hr> [
-  <a href="../toc.html">Table Of Contents</a>
-| <a href="../index.html">Keyword Index</a>
+  <a href="../../toc.html">Main Table Of Contents</a>
+| <a href="../toc.html">Table Of Contents</a>
+| <a href="../../index.html">Keyword Index</a>
 ] <hr>
 <h1 class="title">c::stack(n) 1 stack &quot;Tcl Data Structures&quot;</h1>
 <div id="name" class="section"><h2><a name="name">Name</a></h2>
@@ -220,7 +221,7 @@ Please also report any ideas for enhancements you may have for either
 package and/or documentation.</p>
 </div>
 <div id="keywords" class="section"><h2><a name="keywords">Keywords</a></h2>
-<p><a href="../index.html#key2">data structures</a>, <a href="../index.html#key0">lifo</a>, <a href="../index.html#key1">stack</a></p>
+<p><a href="../../index.html#key2">data structures</a>, <a href="../../index.html#key0">lifo</a>, <a href="../../index.html#key1">stack</a></p>
 </div>
 <div id="category" class="section"><h2><a name="category">Category</a></h2>
 <p>Data structures</p>
