--- a/embedded/stack/www/stack/toc.html
+++ b/embedded/stack/www/stack/toc.html
@@ -7,17 +7,17 @@
    -->
 <body>
 <hr> [
-  <a href="index.html">Keyword Index</a>
+  <a href="../index.html">Keyword Index</a>
 ] <hr>
 <h3> Table Of Contents </h3>
 <hr><dl><dt><h2> stack </h2><dd>
 <table class="#toc">
 <tr class="#toceven" >
-<td class="#tocleft" ><a href="stack/files/stack.html">struct::stack</a></td>
+<td class="#tocleft" ><a href="files/stack.html">struct::stack</a></td>
 <td class="#tocright">Create and manipulate stacks</td>
 </tr>
 <tr class="#tocodd"  >
-<td class="#tocleft" ><a href="stack/files/cstack.html">c::stack</a></td>
+<td class="#tocleft" ><a href="files/cstack.html">c::stack</a></td>
 <td class="#tocright">Create and manipulate stacks</td>
 </tr>
 </table>
