struct::stack : Refactored the documentation to share the common text blocks between Tcl and C implementations.

--- a/embedded/stackc/www/toc.html
+++ b/embedded/stackc/www/toc.html
@@ -14,7 +14,7 @@
 <table class="#toc">
 <tr class="#toceven" >
 <td class="#tocleft" ><a href="stackc/files/struct_stack_c.html">struct::stack</a></td>
-<td class="#tocright">Create and manipulate stacks</td>
+<td class="#tocright">Create and manipulate stacks, C</td>
 </tr>
 </table>
 </dl><hr></body></html>
