--- a/embedded/stackc/www/stackc/files/struct_stack_c.html
+++ b/embedded/stackc/www/stackc/files/struct_stack_c.html
@@ -103,7 +103,7 @@
 ] <hr>
 <h1 class="title">struct::stack(n) 2 stackc &quot;Tcl Data Structures&quot;</h1>
 <div id="name" class="section"><h2><a name="name">Name</a></h2>
-<p>struct::stack - Create and manipulate stacks</p>
+<p>struct::stack - Create and manipulate stacks, C</p>
 </div>
 <div id="toc" class="section"><h2><a name="toc">Table Of Contents</a></h2>
 <ul class="toc">
@@ -112,14 +112,8 @@
 <li class="section"><a href="#section1">Description</a></li>
 <li class="section"><a href="#section2">Class API</a></li>
 <li class="section"><a href="#section3">Instance API</a></li>
-<li class="section"><a href="#section4">Implementations</a>
-<ul>
-<li class="subsection"><a href="#subsection1">critcl v3.1.1, critcl::class 1.0.3</a></li>
-<li class="subsection"><a href="#subsection2">pure Tcl</a></li>
-</ul>
-</li>
-<li class="section"><a href="#section5">License</a></li>
-<li class="section"><a href="#section6">Bugs, Ideas, Feedback</a></li>
+<li class="section"><a href="#section4">License</a></li>
+<li class="section"><a href="#section5">Bugs, Ideas, Feedback</a></li>
 <li class="section"><a href="#keywords">Keywords</a></li>
 <li class="section"><a href="#category">Category</a></li>
 </ul>
@@ -128,6 +122,8 @@
 <div class="synopsis">
 <ul class="requirements">
 <li>package require <b class="pkgname">Tcl 8.5</b></li>
+<li>package require <b class="pkgname">c::slice <span class="opt">?1?</span></b></li>
+<li>package require <b class="pkgname">c::stack <span class="opt">?1?</span></b></li>
 <li>package require <b class="pkgname">struct::stack <span class="opt">?2?</span></b></li>
 </ul>
 <ul class="syntax">
@@ -149,13 +145,11 @@
 </div>
 <div id="section1" class="section"><h2><a name="section1">Description</a></h2>
 <p>Welcome to Struct, a set of packages providing various data structures
-to Tcl, and additional operations for existing Tcl structures.
-This manpage documents the API used by all implementations of the
-<b class="package">struct::stack</b> commands for the creation and handling of
-stack objects.</p>
-<p>The various implementations may depend on different packages
-however, although Tcl version 8.5 or higher is a minimum requirement
-for all.</p>
+to Tcl, and additional operations for existing Tcl structures.</p>
+<p>This manpage documents the C implementation of the
+<b class="package">struct::stack</b> package. It provides the same API as the Tcl
+implementation, although details like the exact wording of error
+messages may differ.</p>
 </div>
 <div id="section2" class="section"><h2><a name="section2">Class API</a></h2>
 <p>The <b class="namespace">::struct</b> namespace contains a single command with
@@ -233,20 +227,10 @@ If more than one <i class="arg">item</i> is given, they will be pushed in the or
 they are listed.</p></dd>
 </dl>
 </div>
-<div id="section4" class="section"><h2><a name="section4">Implementations</a></h2>
-<div id="subsection1" class="subsection"><h3><a name="subsection1">critcl v3.1.1, critcl::class 1.0.3</a></h3>
-<p>This is a C implementation of the API depending on the packages
-<b class="package">c::slice</b> and <b class="package">c::stack</b>.</p>
-</div>
-<div id="subsection2" class="subsection"><h3><a name="subsection2">pure Tcl</a></h3>
-<p>This is a pure Tcl implementation of the API depending on the package
-<b class="package">TclOO</b>.</p>
-</div>
-</div>
-<div id="section5" class="section"><h2><a name="section5">License</a></h2>
+<div id="section4" class="section"><h2><a name="section4">License</a></h2>
 <p>This package, written by Andreas Kupries, is BSD licensed.</p>
 </div>
-<div id="section6" class="section"><h2><a name="section6">Bugs, Ideas, Feedback</a></h2>
+<div id="section5" class="section"><h2><a name="section5">Bugs, Ideas, Feedback</a></h2>
 <p>This document, and the package it describes, will undoubtedly contain
 bugs and other problems.
 Please report such at the
