c::index : New package. Replication of TclGetIntForIndex().

--- a/embedded/www/toc.html
+++ b/embedded/www/toc.html
@@ -60,5 +60,9 @@
 <td class="#tocleft" ><a href="doc/files/struct_installer.html">struct_install_guide</a></td>
 <td class="#tocright">Struct - The Installer's Guide</td>
 </tr>
+<tr class="#toceven" >
+<td class="#tocleft" ><a href="doc/files/cindex/cindex.html">c::index</a></td>
+<td class="#tocright">TclGetForIndex emulation</td>
+</tr>
 </table>
 </dl><hr></body></html>
