Documentation: Tweaked c::slice/c::queue titles. Regenerated.

--- a/embedded/www/toc.html
+++ b/embedded/www/toc.html
@@ -13,16 +13,16 @@
 <hr><dl><dt><h2> doc </h2><dd>
 <table class="#toc">
 <tr class="#toceven" >
-<td class="#tocleft" ><a href="doc/files/cstack/cstack.html">c::stack</a></td>
-<td class="#tocright">Create and manipulate C-level stack objects</td>
+<td class="#tocleft" ><a href="doc/files/cslice/cslice.html">c::slice</a></td>
+<td class="#tocright">Create and manipulate C-level array slices</td>
 </tr>
 <tr class="#tocodd"  >
 <td class="#tocleft" ><a href="doc/files/cqueue/cqueue.html">c::queue</a></td>
-<td class="#tocright">Create and manipulate queues</td>
+<td class="#tocright">Create and manipulate C-level queue objects</td>
 </tr>
 <tr class="#toceven" >
-<td class="#tocleft" ><a href="doc/files/cslice/cslice.html">c::slice</a></td>
-<td class="#tocright">Create and manipulate slices</td>
+<td class="#tocleft" ><a href="doc/files/cstack/cstack.html">c::stack</a></td>
+<td class="#tocright">Create and manipulate C-level stack objects</td>
 </tr>
 <tr class="#tocodd"  >
 <td class="#tocleft" ><a href="doc/files/queuec/struct_queue_c.html">struct::queue</a></td>
