struct::set : Added documentation. Regenerated the nroff and HTML.

--- a/embedded/www/index.html
+++ b/embedded/www/index.html
@@ -12,35 +12,74 @@
 ] <hr>
 <h3> Keyword Index </h3>
 <hr><div class="#idxnav">
-<a href="#c1"> A </a> &#183; <a href="#c2"> D </a> &#183; <a href="#c3"> F </a> &#183; <a href="#c4"> L </a> &#183; <a href="#c5"> Q </a> &#183; <a href="#c6"> S </a> &#183; <a href="#c7"> T </a>
+<a href="#c1"> A </a> &#183; <a href="#c2"> C </a> &#183; <a href="#c3"> D </a> &#183; <a href="#c4"> E </a> &#183; <a href="#c5"> F </a> &#183; <a href="#c6"> I </a> &#183; <a href="#c7"> L </a> &#183; <a href="#c8"> M </a> &#183; <a href="#c9"> Q </a> &#183; <a href="#c10"> S </a> &#183; <a href="#c11"> T </a> &#183; <a href="#c12"> U </a>
 </div>
 <hr><table class="#idx" width="100%">
 <tr class="#idxheader"><th colspan="2">
 <a name="c1">Keywords: A</a>
 </th></tr>
 <tr class="#idxeven" valign=top>
-<td class="#idxleft" width="35%"><a name="key4"> array slice </a></td>
+<td class="#idxleft" width="35%"><a name="key5"> array slice </a></td>
 <td class="#idxright" width="65%">
 <a href="doc/files/cslice/cslice.html"> c::slice </a>
 </td></tr>
 <tr class="#idxheader"><th colspan="2">
-<a name="c2">Keywords: D</a>
+<a name="c2">Keywords: C</a>
 </th></tr>
 <tr class="#idxodd" valign=top>
-<td class="#idxleft" width="35%"><a name="key0"> data structures </a></td>
+<td class="#idxleft" width="35%"><a name="key8"> cardinality </a></td>
 <td class="#idxright" width="65%">
-<a href="doc/files/cindex/cindex.html"> c::index </a> &#183; <a href="doc/files/cqueue/cqueue.html"> c::queue </a> &#183; <a href="doc/files/cslice/cslice.html"> c::slice </a> &#183; <a href="doc/files/cstack/cstack.html"> c::stack </a> &#183; <a href="doc/files/queuec/struct_queue_c.html"> struct::queue </a> &#183; <a href="doc/files/queuetcl/struct_queue_tcl.html"> struct::queue </a> &#183; <a href="doc/files/stackc/struct_stack_c.html"> struct::stack </a> &#183; <a href="doc/files/stacktcl/struct_stack_tcl.html"> struct::stack </a> &#183; <a href="doc/files/struct_devguide.html"> struct_devguide </a> &#183; <a href="doc/files/struct_installer.html"> struct_install_guide </a> &#183; <a href="doc/files/struct_intro.html"> struct_introduction </a> &#183; <a href="doc/files/struct_license.html"> struct_license </a> &#183; <a href="doc/files/struct_sources.html"> struct_sources </a>
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
 </td></tr>
 <tr class="#idxheader"><th colspan="2">
-<a name="c3">Keywords: F</a>
+<a name="c3">Keywords: D</a>
 </th></tr>
 <tr class="#idxeven" valign=top>
-<td class="#idxleft" width="35%"><a name="key7"> fifo </a></td>
+<td class="#idxleft" width="35%"><a name="key0"> data structures </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/cindex/cindex.html"> c::index </a> &#183; <a href="doc/files/cqueue/cqueue.html"> c::queue </a> &#183; <a href="doc/files/cslice/cslice.html"> c::slice </a> &#183; <a href="doc/files/cstack/cstack.html"> c::stack </a> &#183; <a href="doc/files/queuec/struct_queue_c.html"> struct::queue </a> &#183; <a href="doc/files/queuetcl/struct_queue_tcl.html"> struct::queue </a> &#183; <a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a> &#183; <a href="doc/files/stackc/struct_stack_c.html"> struct::stack </a> &#183; <a href="doc/files/stacktcl/struct_stack_tcl.html"> struct::stack </a> &#183; <a href="doc/files/struct_devguide.html"> struct_devguide </a> &#183; <a href="doc/files/struct_installer.html"> struct_install_guide </a> &#183; <a href="doc/files/struct_intro.html"> struct_introduction </a> &#183; <a href="doc/files/struct_license.html"> struct_license </a> &#183; <a href="doc/files/struct_sources.html"> struct_sources </a>
+</td></tr>
+<tr class="#idxodd" valign=top>
+<td class="#idxleft" width="35%"><a name="key15"> difference </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
+</td></tr>
+<tr class="#idxheader"><th colspan="2">
+<a name="c4">Keywords: E</a>
+</th></tr>
+<tr class="#idxeven" valign=top>
+<td class="#idxleft" width="35%"><a name="key10"> emptiness </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
+</td></tr>
+<tr class="#idxodd" valign=top>
+<td class="#idxleft" width="35%"><a name="key14"> exclusion </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
+</td></tr>
+<tr class="#idxheader"><th colspan="2">
+<a name="c5">Keywords: F</a>
+</th></tr>
+<tr class="#idxeven" valign=top>
+<td class="#idxleft" width="35%"><a name="key17"> fifo </a></td>
 <td class="#idxright" width="65%">
 <a href="doc/files/queuec/struct_queue_c.html"> struct::queue </a> &#183; <a href="doc/files/queuetcl/struct_queue_tcl.html"> struct::queue </a>
 </td></tr>
 <tr class="#idxheader"><th colspan="2">
-<a name="c4">Keywords: L</a>
+<a name="c6">Keywords: I</a>
+</th></tr>
+<tr class="#idxodd" valign=top>
+<td class="#idxleft" width="35%"><a name="key7"> inclusion </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
+</td></tr>
+<tr class="#idxeven" valign=top>
+<td class="#idxleft" width="35%"><a name="key16"> intersection </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
+</td></tr>
+<tr class="#idxheader"><th colspan="2">
+<a name="c7">Keywords: L</a>
 </th></tr>
 <tr class="#idxodd" valign=top>
 <td class="#idxleft" width="35%"><a name="key1"> lifo </a></td>
@@ -48,18 +87,31 @@
 <a href="doc/files/cqueue/cqueue.html"> c::queue </a> &#183; <a href="doc/files/cstack/cstack.html"> c::stack </a> &#183; <a href="doc/files/stackc/struct_stack_c.html"> struct::stack </a> &#183; <a href="doc/files/stacktcl/struct_stack_tcl.html"> struct::stack </a>
 </td></tr>
 <tr class="#idxheader"><th colspan="2">
-<a name="c5">Keywords: Q</a>
+<a name="c8">Keywords: M</a>
 </th></tr>
 <tr class="#idxeven" valign=top>
+<td class="#idxleft" width="35%"><a name="key9"> membership </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
+</td></tr>
+<tr class="#idxheader"><th colspan="2">
+<a name="c9">Keywords: Q</a>
+</th></tr>
+<tr class="#idxodd" valign=top>
 <td class="#idxleft" width="35%"><a name="key6"> queue </a></td>
 <td class="#idxright" width="65%">
 <a href="doc/files/cqueue/cqueue.html"> c::queue </a> &#183; <a href="doc/files/queuec/struct_queue_c.html"> struct::queue </a> &#183; <a href="doc/files/queuetcl/struct_queue_tcl.html"> struct::queue </a>
 </td></tr>
 <tr class="#idxheader"><th colspan="2">
-<a name="c6">Keywords: S</a>
+<a name="c10">Keywords: S</a>
 </th></tr>
+<tr class="#idxeven" valign=top>
+<td class="#idxleft" width="35%"><a name="key12"> set </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
+</td></tr>
 <tr class="#idxodd" valign=top>
-<td class="#idxleft" width="35%"><a name="key3"> slice </a></td>
+<td class="#idxleft" width="35%"><a name="key4"> slice </a></td>
 <td class="#idxright" width="65%">
 <a href="doc/files/cslice/cslice.html"> c::slice </a>
 </td></tr>
@@ -68,13 +120,26 @@
 <td class="#idxright" width="65%">
 <a href="doc/files/cstack/cstack.html"> c::stack </a> &#183; <a href="doc/files/stackc/struct_stack_c.html"> struct::stack </a> &#183; <a href="doc/files/stacktcl/struct_stack_tcl.html"> struct::stack </a>
 </td></tr>
-<tr class="#idxheader"><th colspan="2">
-<a name="c7">Keywords: T</a>
-</th></tr>
 <tr class="#idxodd" valign=top>
-<td class="#idxleft" width="35%"><a name="key5"> TclGetForIndex emulation </a></td>
+<td class="#idxleft" width="35%"><a name="key11"> symmetric difference </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
+</td></tr>
+<tr class="#idxheader"><th colspan="2">
+<a name="c11">Keywords: T</a>
+</th></tr>
+<tr class="#idxeven" valign=top>
+<td class="#idxleft" width="35%"><a name="key3"> TclGetForIndex emulation </a></td>
 <td class="#idxright" width="65%">
 <a href="doc/files/cindex/cindex.html"> c::index </a>
+</td></tr>
+<tr class="#idxheader"><th colspan="2">
+<a name="c12">Keywords: U</a>
+</th></tr>
+<tr class="#idxodd" valign=top>
+<td class="#idxleft" width="35%"><a name="key13"> union </a></td>
+<td class="#idxright" width="65%">
+<a href="doc/files/settcl/struct_set_tcl.html"> struct::set </a>
 </td></tr>
 </table>
 </body></html>
